--- a/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-
 <hr />
 <div class="wrapper fadeInDown">
     <div id="formContent">
@@ -25,28 +24,50 @@
                         <span asp-validation-for="SURNAME" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="USERNAME" class="control-label"></label>
+                        <input asp-for="USERNAME" class="form-control fadeIn second" placeholder="username" />
+                        <span asp-validation-for="USERNAME" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ADDRESS" class="control-label"></label>
+                        <input asp-for="ADDRESS" class="form-control fadeIn second" placeholder="address" />
+                        <span asp-validation-for="ADDRESS" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="CITYNAME" class="control-label"></label>
                         <input type="text" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
                         <span asp-validation-for="CITYNAME" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="PHONE" class="control-label"></label>
+                        <input type="text" asp-for="PHONE" class="form-control fadeIn second" placeholder="phone number" />
+                        <span asp-validation-for="PHONE" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="MAIL" class="control-label"></label>
                         <input type="text" asp-for="MAIL" class="form-control fadeIn second" placeholder="mail" />
                         <span asp-validation-for="MAIL" class="text-danger fadeIn second"></span>
                     </div>
+                    
                     <div class="form-group">
                         <label asp-for="PASSWORD" class="control-label"></label>
                         <input type="password" asp-for="PASSWORD" class="form-control fadeIn second" placeholder="password" />
                         <span asp-validation-for="PASSWORD" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="fadeIn fourth" value="Create" />
+                        <label asp-for="confirmerPassword" class="control-label"></label>
+                        <input type="password" asp-for="confirmerPassword" class="form-control fadeIn second" placeholder="confirm password" />
+                        <span asp-validation-for="confirmerPassword" class="text-danger fadeIn second"></span>
                     </div>
+                    <div class="form-group">
+                        <input type="submit" class="fadeIn fourth" value="Create" onclick="window.confirm('Account created')"/>
+                    </div>                   
                 </form>
             </div>
         </div>
      </div>
  </div>
+
 
     <div>
         <a asp-action="Index">Back to List</a>
@@ -55,3 +76,5 @@
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
+
+
