--- a/WebAppVSEAT/Views/Login/CreateCustomertest.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomertest.cshtml
@@ -1,24 +1,17 @@
 ﻿@model WebAppVSEAT.Models.CustomerVM
 
 @{
-    ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "CreateCustomer";
 }
 
+<h1>CreateCustomer</h1>
+
+<h4>CustomerVM</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="CreateCustomer">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         <div class="hide">
-            <input asp-for="IDCUSTOMER" type="hidden" class="form-control" />
-            <span asp-validation-for="IDCUSTOMER" class="text-danger"></span>
-        </div>
-        <div class="hide">
-            <label asp-for="IDCITY" class="control-label"></label>
-            <input asp-for="IDCITY" class="form-control" />
-            <span asp-validation-for="IDCITY" class="text-danger"></span>
-        </div>
             <div class="form-group">
                 <label asp-for="NAME" class="control-label"></label>
                 <input asp-for="NAME" class="form-control" />
@@ -56,29 +49,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="PASSWORD" class="control-label"></label>
-                <input asp-for="PASSWORD" class="form-control" type="hidden"/>
+                <input asp-for="PASSWORD" class="form-control" />
                 <span asp-validation-for="PASSWORD" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="confirmerPassword" class="control-label"></label>
-                <input asp-for="confirmerPassword" class="form-control fadeIn second" placeholder="confirm password" />
-                <span asp-validation-for="confirmerPassword" class="text-danger fadeIn second"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    @Html.ActionLink("Change Password", "ChangePasswordCustomer")
-</div>
-
-<div>
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
