--- a/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <h1>VSEAT</h1>
             <div class="container">
-     
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - WebAppVSEAT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - VSEAT - Made by Thomas Cheseaux and Daniel Coimbra
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
