--- a/WebAppVSEAT/Views/Customer/ChangePasswordCustomer.cshtml
+++ b/WebAppVSEAT/Views/Customer/ChangePasswordCustomer.cshtml
@@ -4,33 +4,38 @@
     ViewData["Title"] = "ChangePasswordCustomer";
 }
 
-<h1>ChangePasswordCustomer</h1>
 
-<h4>ChangePasswordCustomerVM</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ChangePasswordCustomer">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PASSWORDCUSTOMER" class="control-label"></label>
-                <input asp-for="PASSWORDCUSTOMER" class="form-control" />
-                <span asp-validation-for="PASSWORDCUSTOMER" class="text-danger"></span>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <center>
+            <h2 class="align-items-center">Change password</h2>
+
+            <div class="row justify-content-center align-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text">
+
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label" asp-for="PASSWORDCUSTOMER" />
+                            <input type="password" asp-for="PASSWORDCUSTOMER" class="form-control fadeIn second" placeholder="password" />
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label" asp-for="NEWPASSWORD" />
+                            <input type="password" asp-for="NEWPASSWORD" class="form-control fadeIn second" placeholder="new password" />
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label" asp-for="CONFIRMPASSWORD" />
+                            <input type="password" asp-for="CONFIRMPASSWORD" class="form-control fadeIn second" placeholder="confirm password" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="NEWPASSWORD" class="control-label"></label>
-                <input asp-for="NEWPASSWORD" class="form-control" />
-                <span asp-validation-for="NEWPASSWORD" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CONFIRMPASSWORD" class="control-label"></label>
-                <input asp-for="CONFIRMPASSWORD" class="form-control" />
-                <span asp-validation-for="CONFIRMPASSWORD" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </center>
     </div>
 </div>
 
