--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
@@ -32,9 +32,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.dish.NAMEDISH)
             </td>
-            <th>
-                @Html.HiddenFor(model => item.IDRESTAURANT)
-            </th>
             <td>
                 @Html.DisplayFor(modelItem => item.QUANTITY)
             </td>
@@ -53,12 +50,12 @@
 
     <tfoot>
         <tr>
-            <td colspan="3"><span style='font-weight:bold;'>total of this order :</span></td>
+            <td colspan="3"><span style='font-weight:bold;'>Total :</span></td>
             <td><span style='font-weight:bold;'>@sommeTotal</span> CHF</td>
         </tr>
     </tfoot>
 </table>
 
-<h4> your order will be delivered at @Model.hour</h4>
-<h4> your order number is : @Model.IDORDER</h4>
+<h4> Delivery Time : @Model.hour</h4>
+<h4> Order number : @Model.IDORDER</h4>
 
