--- a/WebAppVSEAT/Views/Order/Orders.cshtml
+++ b/WebAppVSEAT/Views/Order/Orders.cshtml
@@ -10,13 +10,12 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th class="headerOrder">
                 @Html.DisplayNameFor(model => model.IDORDER)
             </th>
-            <th>
+            <th class="headerOrder">
                 @Html.DisplayNameFor(model => model.DELIVERTIME)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
