--- a/WebAppVSEAT/Views/Shared/_Layout.cshtml
+++ b/WebAppVSEAT/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/dishes.css" />
     <link rel="stylesheet" href="~/css/Restaurant.css" />
+    <link rel="stylesheet" href="~/css/Profile.css" />
 
 
 </head>
