--- a/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/dishes.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/Profile.css" />
 </head>
 <body>
     <header>
