--- a/WebAppVSEAT/wwwroot/css/Restaurant.css
+++ b/WebAppVSEAT/wwwroot/css/Restaurant.css
@@ -1,25 +1,29 @@
 ﻿.masonry-grid
 
 {
-    /* It is split into 3 columns */
     column-count: 3;
-    /* The space between columns */
     column-gap: 1rem;
-    /* Misc */
     width: 100%;
 
     
 }
 
 .masonry-grid__item {
-    /* Prevent a column from breaking into multiple columns */
     break-inside: avoid;
-    /* Misc */
+    padding: 5px 5px 5px 5px;
     margin-bottom: 1rem;
-    background-color: gainsboro;
+    background-color: transparent;
     text-align: center;
+}
 
-       
+
+.cardSearch {
+
+    break-inside: avoid;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 1rem;
+    background-color: transparent;
+    text-align: center;
 }
 
 
