Profiles and dropdown menu

--- a/WebAppVSEAT/Views/Customer/Index.cshtml
+++ b/WebAppVSEAT/Views/Customer/Index.cshtml
@@ -24,7 +24,12 @@
     <p>
         <button value="Edit">
             <div>
-                    @Html.ActionLink("Edit", "Edit")
+                @Html.ActionLink("Edit", "Edit")
+            </div>
+        </button>
+        <button value="Edit">
+            <div>
+                @Html.ActionLink("Change Password", "ChangePasswordCustomer")
             </div>
         </button>
     </p>
