--- a/WebAppVSEAT/Views/Shared/_Layout.cshtml
+++ b/WebAppVSEAT/Views/Shared/_Layout.cshtml
@@ -36,11 +36,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Orders">Current Orders</a>
                         </li>
                     </ul>
+
+
                     <div class="nav-item">
-                        <a class="nav-link text-dark a-right" asp-area="" asp-controller="Customer" asp-action="Index">Profile</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link text-dark a-right" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
+                        <div class="dropdown">
+                            <!-- The trigger element -->
+                            <button class="btn a-right">...</button>
+
+                            <!-- The content -->
+                            <div class="dropdown__content">
+                                <a class="nav-link text-dark " asp-area="" asp-controller="Customer" asp-action="Index">Profile</a>
+                                <a class="nav-link text-dark " asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
