--- a/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
@@ -27,13 +27,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="OrdersStaff">Orders</a>
                         </li>
                     </ul>
-                    <div class="nav-item">
-                        <a class="nav-link text-dark a-right" asp-area="" asp-controller="Staff" asp-action="Profile">Profile</a>
-                    </div>
-                    <div class="nav-item">
-                        <a class="nav-link text-dark a-right" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
+                </div>
+                <div class="nav-item">
+                    <div class="dropdown">
+                        <!-- The trigger element -->
+                        <button class="btn a-right">...</button>
+                        <!-- The content -->
+                        <div class="dropdown__content">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Staff" asp-action="Profile">Profile</a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </nav>
     </header>
