--- a/WebAppVSEAT/wwwroot/css/site.css
+++ b/WebAppVSEAT/wwwroot/css/site.css
@@ -59,7 +59,7 @@ a {
     text-decoration: none;
     font-weight: 400;
     background-color: transparent;
-    font-size: 15px;
+    font-size: 18px;
     color: black;
 }
 }
@@ -148,6 +148,32 @@ body {
     position: sticky;
     top: 0; 
     z-index: 9999;
+}
+
+
+.dropdown {
+    position: relative;
+}
+
+/* Hide the dropdown's content by default */
+.dropdown__content {
+    display: none;
+    /* Position it right below the trigger element */
+    left: 0;
+    padding-top: 4px;
+    position: absolute;
+    top: 100%;
+    /* It should be on the top of other elements */
+    background-color: #fff;
+    z-index: 9999;
+    /* Size */
+    height: 200px;
+    width: 200px;
+}
+
+/* Show the content when hover on the container */
+.dropdown:hover .dropdown__content {
+    display: block;
 }
 
 
