--- a/WebAppVSEAT/Views/Staff/Edit.cshtml
+++ b/WebAppVSEAT/Views/Staff/Edit.cshtml
@@ -15,6 +15,14 @@
                         <div asp-validation-summary="All" class="text">
 
                         </div>
+                        <div class="hide">
+                            <input asp-for="IDSTAFF" type="hidden" class="form-control" />
+                            <span asp-validation-for="IDSTAFF" class="text-danger"></span>
+                        </div>
+                        <div class="hide">
+                            <input asp-for="IDCITY" type="hidden" class="form-control" />
+                            <span asp-validation-for="IDCITY" class="text-danger"></span>
+                        </div>
                         <div class="form-group">
                             <label class="col-form-label" asp-for="NAMESTAFF" />
                             <input type="text" asp-for="NAMESTAFF" class="form-control fadeIn second" placeholder="name" />
