--- a/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
@@ -60,7 +60,7 @@
                         <span asp-validation-for="confirmerPassword" class="text-danger fadeIn second"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="fadeIn fourth" value="Create" onclick="window.confirm('Account created')"/>
+                        <input type="submit" class="fadeIn fourth" value="Create"/>
                     </div>                   
                 </form>
             </div>
