--- a/WebAppVSEAT/Views/Staff/Edit.cshtml
+++ b/WebAppVSEAT/Views/Staff/Edit.cshtml
@@ -24,30 +24,37 @@
                             <span asp-validation-for="IDCITY" class="text-danger"></span>
                         </div>
                         <div class="form-group">
+                            <h6>Name</h6>
                             <label class="col-form-label" asp-for="NAMESTAFF" />
                             <input type="text" asp-for="NAMESTAFF" class="form-control fadeIn second" placeholder="name" />
                         </div>
                         <div class="form-group">
+                            <h6>Surname</h6>
                             <label class="col-form-label" asp-for="SURNAMESTAFF" />
                             <input type="text" asp-for="SURNAMESTAFF" class="form-control fadeIn second" placeholder="surname" />
                         </div>
                         <div class="form-group">
+                            <h6>Mail</h6>
                             <label class="col-form-label" asp-for="MAILSTAFF" />
                             <input type="text" asp-for="MAILSTAFF" class="form-control fadeIn second" placeholder="mail" />
                         </div>
                         <div class="form-group">
+                            <h6>Phonenumber</h6>
                             <label class="col-form-label" asp-for="PHONENUMBERSTAFF" />
                             <input type="text" asp-for="PHONENUMBERSTAFF" class="form-control fadeIn second" placeholder="phonenumber" />
                         </div>
                         <div class="form-group">
+                            <h6>Address</h6>
                             <label class="col-form-label" asp-for="ADDRESSSTAFF" />
                             <input type="text" asp-for="ADDRESSSTAFF" class="form-control fadeIn second" placeholder="address" />
                         </div>
                         <div class="form-group">
+                            <h6>City</h6>
                             <label class="col-form-label" asp-for="CITYNAME" />
                             <input type="text" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
                         </div>
                         <div class="form-group">
+                            <h6>Username</h6>
                             <label class="col-form-label" asp-for="USERNAMESTAFF" />
                             <input type="text" asp-for="USERNAMESTAFF" class="form-control fadeIn second" placeholder="username" />
                         </div>
