--- a/WebAppVSEAT/Views/Customer/Index.cshtml
+++ b/WebAppVSEAT/Views/Customer/Index.cshtml
@@ -24,7 +24,7 @@
     <p>
         <button value="Edit">
             <div>
-                @Html.ActionLink("Edit", "Edit")
+                @Html.ActionLink("Edit Profile", "Edit")
             </div>
         </button>
         <button value="Edit">
