--- a/WebAppVSEAT/Views/Customer/Edit.cshtml
+++ b/WebAppVSEAT/Views/Customer/Edit.cshtml
@@ -6,67 +6,68 @@
 }
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         <div class="hide">
-            <input asp-for="IDCUSTOMER" type="hidden" class="form-control" />
-            <span asp-validation-for="IDCUSTOMER" class="text-danger"></span>
-        </div>
-        <div class="hide">
-            <input asp-for="IDCITY" type="hidden" class="form-control" />
-            <span asp-validation-for="IDCITY" class="text-danger"></span>
-        </div>
-            <div class="form-group">
-                <label asp-for="NAME" class="control-label"></label>
-                <input asp-for="NAME" class="form-control" />
-                <span asp-validation-for="NAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SURNAME" class="control-label"></label>
-                <input asp-for="SURNAME" class="form-control" />
-                <span asp-validation-for="SURNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="USERNAME" class="control-label"></label>
-                <input asp-for="USERNAME" class="form-control" />
-                <span asp-validation-for="USERNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PHONE" class="control-label"></label>
-                <input asp-for="PHONE" class="form-control" />
-                <span asp-validation-for="PHONE" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ADDRESS" class="control-label"></label>
-                <input asp-for="ADDRESS" class="form-control" />
-                <span asp-validation-for="ADDRESS" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CITYNAME" class="control-label"></label>
-                <input asp-for="CITYNAME" class="form-control" />
-                <span asp-validation-for="CITYNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MAIL" class="control-label"></label>
-                <input asp-for="MAIL" class="form-control" />
-                <span asp-validation-for="MAIL" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <center>
+            <div class="row justify-content-center align-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text">
+
+                        </div>
+                        <div class="hide">
+                            <input asp-for="IDCUSTOMER" type="hidden" class="form-control" />
+                            <span asp-validation-for="IDCUSTOMER" class="text-danger"></span>
+                        </div>
+                        <div class="hide">
+                            <input asp-for="IDCITY" type="hidden" class="form-control" />
+                            <span asp-validation-for="IDCITY" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <h6>Name</h6>
+                            <label class="col-form-label" asp-for="NAME" />
+                            <input type="text" asp-for="NAME" class="form-control fadeIn second" placeholder="name" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Surname</h6>
+                            <label class="col-form-label" asp-for="SURNAME" />
+                            <input type="text" asp-for="SURNAME" class="form-control fadeIn second" placeholder="surname" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Username</h6>
+                            <label class="col-form-label" asp-for="USERNAME" />
+                            <input type="text" asp-for="USERNAME" class="form-control fadeIn second" placeholder="username" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Phone Number</h6>
+                            <label class="col-form-label" asp-for="PHONE" />
+                            <input type="text" asp-for="PHONE" class="form-control fadeIn second" placeholder="phonenumber" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Address</h6>
+                            <label class="col-form-label" asp-for="ADDRESS" />
+                            <input type="text" asp-for="ADDRESS" class="form-control fadeIn second" placeholder="address" />
+                        </div>
+                        <div class="form-group">
+                            <h6>City</h6>
+                            <label class="col-form-label" asp-for="CITYNAME" />
+                            <input type="text" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
+                        </div>
+                        <div class="form-group">
+                            <h6>Email</h6>
+                            <label class="col-form-label" asp-for="MAIL" />
+                            <input type="text" asp-for="MAIL" class="form-control fadeIn second" placeholder="mail" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            </div>  
+        </center>
     </div>
 </div>
 
-<div>
-    @Html.ActionLink("Change Password", "ChangePasswordCustomer")
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
