edit order customer

--- a/WebAppVSEAT/Views/Order/DetailsOrder.cshtml
+++ b/WebAppVSEAT/Views/Order/DetailsOrder.cshtml
@@ -41,6 +41,9 @@
             <h1>
                 @Html.ActionLink("Cancel Order", "CancelOrderID", new { id = Model.IDORDER })
             </h1>
+            <h1>
+                @Html.ActionLink("Edit Order", "EditOrder", new { id = Model.IDORDER })
+            </h1>
         </td>
     </tfoot>
 
