--- a/WebAppVSEAT/Views/Order/Historic.cshtml
+++ b/WebAppVSEAT/Views/Order/Historic.cshtml
@@ -41,6 +41,9 @@
             <th class="headerOrder">
                 @Html.DisplayNameFor(model => model.STATUS)
             </th>
+            <th class="headerOrder">
+
+            </th>
         </tr>
     </thead>
     <tbody>
