--- a/WebAppVSEAT/Views/Order/Orders.cshtml
+++ b/WebAppVSEAT/Views/Order/Orders.cshtml
@@ -16,6 +16,12 @@
             <th class="headerOrder">
                 @Html.DisplayNameFor(model => model.DELIVERTIME)
             </th>
+            <th class="headerOrder">
+               
+            </th>
+            <th class="headerOrder">
+                
+            </th>
         </tr>
     </thead>
     <tbody>
